add jupyter file selection interface

--- a/Useful Helper Functions.ipynb
+++ b/Useful Helper Functions.ipynb
@@ -41,6 +41,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Jupyter Interface\n",
+    "\n",
+    "Select a file and perform some action on it.\n",
+    "\n",
+    "More jupyter widgets are in the official documentation's [Widget List](https://ipywidgets.readthedocs.io/en/stable/examples/Widget%20List.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def action(button):\n",
+    "    with out:\n",
+    "        print(f\"Doing something with {file_selection.value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_selection = widgets.Dropdown(description=\"Choose Notebook\", options=glob.glob(\"*.ipynb\"))\n",
+    "action_button = widgets.Button(description=\"Some action\", icon=\"keyboard\")\n",
+    "action_button.on_click(action)\n",
+    "clear = widgets.Button(description=\"Clear\")\n",
+    "clear.on_click(lambda _: out.clear_output())\n",
+    "out = widgets.Output(layout={'border': '1px solid black'})\n",
+    "display(file_selection, action_button, out, clear)\n",
+    "\n",
+    "def on_file_change(change):\n",
+    "    filename = change[\"new\"]\n",
+    "    # Possibility to change other widgets when file_selection has changed\n",
+    "    \n",
+    "file_selection.observe(on_file_change, names=\"value\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Controlling the notebook"
    ]
   },
